<resources>
    <!-- Textos generales -->
    <string name="app_name">BarberShop</string>
    <string name="Bussines_title">Garza Barber</string>
    <string name="login_title">Login</string>
    <string name="register_title">Sign up</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="email">Correo electronico</string>
    <string name="password_hint">Contraseña</string>
    <string name="password">Contrasena</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <string name="login_here">Inicia sesión aquí</string>
    <string name="remember_user">Recordar usuario</string>
    <string name="full_name">Nombre completo</string>
    <string name="phone">Teléfono</string>

    <!-- Placeholders -->
    <string name="full_name_hint">Juan Pérez</string>
    <string name="email_example">ejemplo@barberia.com</string>
    <string name="password_example">********</string>
    <string name="phone_example">+52 55 1234 5678</string>

    <!-- Textos accesibilidad -->
    <string name="logo_description">Logo de la Barbería</string>
    <string name="google_icon_description">Icono de Google</string>

    <!-- Validaciones -->
    <string name="email_required">El correo es requerido</string>
    <string name="email_invalid">Correo electrónico no válido</string>
    <string name="password_required">La contraseña es requerida</string>
    <string name="password_length">Mínimo 6 caracteres</string>

    <!-- Fragments -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>

    <!-- Home -->
    <string name="banner_promo">Promoción especial de barbería</string>
    <string name="special_offer_desc">OFERTA ESPECIAL</string>
    <string name="destacables">PRODUCTOS DESTACADOS</string>

    <!-- Categorias de productos -->
    <string name="categories">CATEGORÍAS</string>
    <string name="category_maquinillas">Maquinillas</string>
    <string name="category_tijeras">Tijeras</string>
    <string name="category_cremas">Cremas</string>
    <string name="category_afeitadoras">Afeitadoras</string>


    <!-- Buttons -->
    <string name="button_add">Añadir</string>
    <string name="button_buy_now">COMPRAR AHORA</string>
    <string name="continue_with_google">Continuar con Google</string>
    <string name="create_account">Crear cuenta</string>
    <string name="login_button">Iniciar sesion</string>
    <string name="shopping_cart">shopping_cart</string>

    <!-- Productos -->
    <string name="product_kit_profesional_barberia">Kit Profesional Barbería</string>
    <string name="product_tijeras_barber">Tijeras Barber</string>
    <string name="product_crema_de_afeitar">Crema de Afeitar</string>
    <string name="product_afeitadora_clasica">Afeitadora Clásica</string>
    <string name="product_maquina_profesional">Máquina Profesional</string>

    <!-- Precios -->
    <string name="price_cream_shave">$24.99</string>
    <string name="price_barber_scissors">$89.99</string>
    <string name="price_professional_machine">$129.99</string>
    <string name="price_classic_shave">$49.99</string>
    <string name="price_professional_kit_offer">$159.99 (30% OFF)</string>

    <!-- Carrito -->
    <string name="default_web_client_id">default_web_client_id</string>
    <string name="cart_clear">Vaciar Carrito</string>
    <string name="cart_total">Total: $5.00</string>
    <string name="cart_shipping">Envío: $5.00</string>
    <string name="cart_subtotal">Subtotal: $0.00</string>
    <string name="cart_name">Carrito de Compras</string>

    <!-- Item -->
    <string name="item_add">Agregar</string>
    <string name="item_price">$0.00</string>
    <string name="item_name">Nombre del producto</string>
    <string name="account_name">Nombre de Usuario</string>
    <string name="account_edit">Editar perfil</string>
    <string name="account_orders">Mis pedidos</string>
    <string name="account_exit">Cerrar sesión</string>
    <string name="account_shops">Tiendas</string>
    <string name="map_show">Ver Mapa</string>

    <!-- Cuenta -->


</resources>
