<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bussines_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="start"
        />
    <!-- Logo -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/logo_barberia"
        android:contentDescription="@string/logo_description"
        app:tint="#000000" />

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="18dp"/>

    <!-- Campo de email -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#000000"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_border"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="@color/hint_color"
        android:padding="12dp"/>

    <!-- Campo de contraseña -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#000000"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:autofillHints="password"
        android:background="@drawable/edittext_border"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="@color/hint_color"
        android:padding="12dp"/>

    <!-- Olvidé mi contraseña -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/RememberUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_user"
            android:textColor="#000000"
            android:buttonTint="#C7D0D8"
            android:checked="true"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_button"
        android:textColor="#000000"
        android:textSize="16sp"
        android:background="@drawable/button_primary"
        android:backgroundTint="@null"
        />
    <!-- Botón de Google -->
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_google_style"
        android:text="@string/continue_with_google"
        android:textColor="#000000"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_launcher_foreground"
        android:drawableTint="#000000"
        />
</LinearLayout>