<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp">

        <!-- Icono de perfil -->
        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_border"
            android:contentDescription="@string/account_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user"
            tools:ignore="ImageContrastCheck" />

        <!-- Nombre del usuario (opcional) -->
        <TextView
            android:id="@+id/txtNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginBottom="32dp" />

        <!-- Opciones -->
        <Button
            android:id="@+id/btnTiendas"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:text="@string/account_shops"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btnEditarPerfil"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:text="@string/account_edit"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btnMisPedidos"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:text="@string/account_orders"
            android:padding="12dp"
            android:elevation="2dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:text="@string/account_exit"
            android:padding="12dp"
            android:backgroundTint="#FFCDD2"
            android:textColor="#B71C1C"
            android:elevation="2dp"
            android:layout_marginTop="24dp"/>

    </LinearLayout>
</ScrollView>
